# SwarmDrop

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  HANDOFF.md  PRODUCT.md  README.md  README.zh-CN.md  cliff.toml  components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json  swarmhive.toml  todo.md  vite.config.ts  vitest.config.ts
crates/bootstrap/: Cargo.toml  Dockerfile  README.md  compose.coolify.yml  swarm-bootstrap.service
crates/bootstrap/src/: lib.rs  main.rs
crates/bootstrap/src/util/: identity.rs  mod.rs  signal.rs
crates/core/: Cargo.toml
crates/core/examples/: seed_demo_profile.rs
crates/core/src/: device.rs  device_manager.rs  error.rs  event_adapter.rs  host.rs  identity.rs  lib.rs  protocol.rs  runtime.rs
crates/core/src/database/: inbox.rs  mod.rs  ops.rs  store.rs
crates/core/src/infra/: mod.rs  supervisor.rs
crates/core/src/network/: candidates.rs  config.rs  event_loop.rs  manager.rs  mod.rs
crates/core/src/pairing/: code.rs  dht_key.rs  invite.rs  manager.rs  mod.rs
crates/core/src/presence/: mod.rs  supervisor.rs
crates/core/src/protocol/: ids.rs  mod.rs  pairing.rs  transfer_ctrl.rs
crates/core/src/transfer/: actor_registry.rs  checkpoint.rs  coordinator.rs  crypto.rs  data_frame.rs  data_plane.rs  epoch.rs  incoming.rs  manager.rs  mod.rs  policy.rs  prepare.rs  progress.rs  receive.rs  receiver.rs  resume.rs  send.rs  sender.rs
crates/core/src/transfer/actor/: checkpoint.rs  mod.rs  receiver.rs  registry.rs  sender.rs
crates/core/src/transfer/flow/: prepare.rs  receive.rs  send.rs
crates/core/src/transfer/wire/: crypto.rs  data_frame.rs  data_plane.rs  mod.rs
crates/core/tests/: e2e_lan_helper.rs  e2e_transfer.rs  infra_reconcile.rs  presence_lifecycle.rs
crates/entity/: Cargo.toml
crates/entity/src/: inbox_item.rs  inbox_item_file.rs  lib.rs  transfer_file.rs  transfer_session.rs
crates/host/: Cargo.toml
crates/host/src/: device.rs  error.rs  lib.rs  ports.rs
crates/invite/: Cargo.toml
crates/invite/src/: invite.rs  lib.rs  qr.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260626_000001_transfer_lifecycle.rs  m20260627_000001_transfer_range_checkpoint.rs  m20260627_000002_drop_inbox.rs  m20260627_000003_trusted_device_policies.rs  m20260630_000001_inbox_fts.rs  m20260630_000002_add_transfer_origin.rs  m20260704_000001_transfer_file_local_path.rs  m20260704_000002_transfer_file_local_dir.rs  m20260718_000001_transfer_file_outboard.rs
crates/migration/src/m20260228_000001_init/: mod.rs
crates/migration/src/m20260228_000001_init/entity/: mod.rs  types.rs
crates/net/: Cargo.toml  build.rs
crates/net-base/: Cargo.toml
crates/net-base/src/: addr.rs  lib.rs  node_id.rs  protocol_id.rs  status.rs
crates/net/src/: actor.rs  config.rs  dht.rs  endpoint.rs  error.rs  event.rs  lib.rs  lookup.rs  router.rs  rpc.rs  stream.rs  transport.rs  watch.rs
crates/net/src/actor/: queries.rs
crates/net/src/behaviour/: keep_alive.rs  mod.rs
crates/net/src/endpoint/: builder.rs  presets.rs
crates/net/tests/: dht.rs  lifecycle.rs  minimal_relay.rs  relay_circuit.rs  router.rs  rpc.rs  two_nodes.rs  webrtc.rs
crates/net/tests/common/: mod.rs
crates/storage-sql/: Cargo.toml
crates/storage-sql/src/: inbox.rs  lib.rs  ops.rs  store.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: bao.rs  coordinator.rs  events.rs  incoming.rs  lib.rs  manager.rs  peer.rs  progress.rs  protocol.rs  runtime.rs  store.rs
crates/transfer/src/actor/: checkpoint.rs  receiver.rs  registry.rs  sender.rs
crates/transfer/src/flow/: mod.rs  prepare.rs  receive.rs  send.rs
crates/transfer/src/flow/resume/: mod.rs  plan.rs  validation.rs
crates/transfer/src/wire/: data_frame.rs  data_plane.rs  mod.rs
crates/web/: .gitignore  Cargo.toml  README.md  build.rs
crates/web/bindings/: bindings.ts
crates/web/src/: abort.rs  env.rs  error.rs  event_bus.rs  events.rs  file_access.rs  identity.rs  lib.rs  node.rs  opfs.rs  peer.rs  share_code.rs  store.rs  types.rs
crates/web/static/: bench.html  client.js  index.html  worker.js
crates/web/static/types/: bindings.ts
crates/web/tests/: specta_export.rs
spike/iroh-web/: Cargo.toml  LICENSE-MIT  README.md  index.html
spike/iroh-web/.cargo/: config.toml
spike/iroh-web/src/: lib.rs
spike/net-web-smoke/: Cargo.toml  README.md
spike/net-web-smoke/.cargo/: config.toml
spike/net-web-smoke/src/: lib.rs  main.rs
spike/net-web-smoke/static/: index.html
spike/webrtc-direct-https/: .gitignore  Cargo.toml  README.md
spike/webrtc-direct-https/.cargo/: config.toml
spike/webrtc-direct-https/src/: lib.rs  main.rs
spike/webrtc-direct-https/static/: index.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: mcp-guide.md
src-tauri/icons/: icon.icns
src-tauri/locales/: en.toml  zh-TW.toml  zh.toml
src-tauri/src/: commands.rs  database.rs  device.rs  error.rs  events.rs  external_open.rs  file_sink.rs  file_source.rs  host.rs  i18n.rs  lib.rs  mcp.rs  mobile.rs  network.rs  protocol.rs  setup.rs  tray.rs
src-tauri/src/commands/: external_open.rs  i18n.rs  identity.rs  inbox.rs  lifecycle.rs  mcp.rs  mod.rs  pairing.rs  transfer.rs
src-tauri/src/database/: mod.rs  ops.rs
src-tauri/src/device/: manager.rs  mod.rs  utils.rs
src-tauri/src/file_sink/: android_ops.rs  mod.rs  path_ops.rs
src-tauri/src/file_source/: android_ops.rs  mod.rs  path_ops.rs
src-tauri/src/host/: device_config.rs  event_bus.rs  file_keychain.rs  file_sink.rs  file_source.rs  keychain.rs  mod.rs  notifier.rs  paths.rs  update_installer.rs
src-tauri/src/host/file_sink/: path_ops.rs
src-tauri/src/host/file_source/: path_ops.rs
src-tauri/src/mcp/: resources.rs  server.rs  tools.rs
src-tauri/src/network/: config.rs  event_loop.rs  manager.rs  mod.rs
src-tauri/src/pairing/: code.rs  dht_key.rs  manager.rs
src-tauri/src/transfer/: mod.rs  offer.rs  progress.rs  receiver.rs  sender.rs
src-tauri/tests/: specta_export.rs
(+1023 files in other folders)
