[workspace]
members = [
    "crates/core",
    "crates/entity",
    "crates/migration",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
sea-orm = { version = "2.0.0-rc", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "2.0.0-rc", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
swarm-p2p-core = { path = "libs/core" }
swarmdrop-core = { path = "crates/core" }
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tokio = "1.49.0"
tokio-util = "0.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
rand = "0.10.0"
chrono = "0.4.43"
sha2 = "0.10.9"
async-trait = "0.1.89"
dashmap = "6.1.0"
tracing = "0.1.44"

[profile.dev.package."*"]
opt-level = 3
