[workspace]
members = [
    "crates/core",
    "crates/entity",
    "crates/migration",
    "crates/net-base",
    "crates/net",
    "src-tauri",
    "mobile/packages/swarmdrop-core/rust/mobile-core",
]
# spike/ 是 wasm-only 的临时验证（#60），不进 members：
# 它只对 wasm32-unknown-unknown 有意义，进了 workspace 会被 `cargo check --workspace`
# 用桌面 target 编一遍、白白拖慢，且它自带的 [profile.release] 也会被 workspace root
# 静默忽略（同 mobile-core 并入时那个坑）。不 exclude 的话 cargo 会报它「在 workspace
# 目录内却不是 member」。
exclude = ["spike"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# default-features=false + 最小 features：entity 只吃类型宏，不吃 runtime——
# Web 端依赖 entity 时不再撞 mio/sqlite 编译墙（storage-abstraction.md 第 0 步）。
# runtime features（runtime-tokio-rustls/sqlx-sqlite）由需要连库的 crate 自己增量补。
sea-orm = { version = "2.0.0-rc", default-features = false, features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
] }
sea-orm-migration = { version = "2.0.0-rc", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
swarmdrop-core = { path = "crates/core" }
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }

# ── 新网络内核（refactor/net-kernel，iroh 风格 API + wasm 双 target）──
swarmdrop-net-base = { path = "crates/net-base" }
swarmdrop-net = { path = "crates/net" }
# libp2p 系全部 pin 同一 git rev。为什么是 git 不是 crates.io：crates.io 最新的
# libp2p-webrtc 0.9.0-alpha.1 的 webrtc-direct 实证跑不通（spike/webrtc-direct-https，
# 修复在 master PR 6429，随未发布的 0.10.0-alpha）。rev 93c5059 = 2026-07-13 master，
# spike 双端（native server + wasm browser）实测通过。0.57 正式发布后切回 crates.io。
# 升级 rev 必须走独立 PR + 全量测试 + wasm check。
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c5059" }
libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c5059" }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c5059" }
# identity/multiaddr 不走 git：93c5059 树自己就把两者解析到 crates.io（spike 的
# Cargo.lock 实证 libp2p-identity 0.2.14 / multiaddr 0.18.2 均为 registry 来源），
# net-base 用 crates.io 版本与 git 树天然 unify，类型底座不背 git 依赖。
libp2p-identity = "0.2"
multiaddr = "0.18"
# 运行时垫片：native = `pub use tokio::*`（类型等价零改动），wasm = spawn_local shim。
# `tokio::sync` 与 `select!` 不必替换（wasm 安全），只有 spawn/time 走它。
n0-future = "0.3"
cfg_aliases = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"
unsigned-varint = { version = "0.8.0", features = ["futures"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tokio = "1.49.0"
tokio-util = "0.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
rand = "0.10.0"
chrono = "0.4.43"
sha2 = "0.11"
async-trait = "0.1.89"
dashmap = "6.1.0"
tracing = "0.1.44"

[profile.dev.package."*"]
opt-level = 3

# 移动端 release —— 包体优先，与桌面的 `[profile.release]`（速度优先）分开。
#
# 为什么不直接写 `[profile.release]`：Cargo 只认 workspace root 的 profile，
# **member 自己的 profile 会被静默忽略**（只有一行 warning）。mobile-core 并入
# workspace 前是隐式 workspace root，自带这套 opt-level="z" 配置；并入后若不搬到
# 这里，移动端包体优化就无声无息地没了。而桌面 release 需要 opt-level=3，两者不能共用。
#
# 消费方：`ubrn build <platform> --profile mobile-release`（ubrn 的 -p 会覆盖 -r）。
# 产物落在 `target/mobile-release/`，不是 `target/release/`。
[profile.mobile-release]
inherits = "release"
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = "symbols"
