[package]
name = "swarmdrop"
version = "0.4.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
tokio = "1.49.0"
async-trait = { workspace = true }
swarm-p2p-core = { workspace = true }
swarmdrop-core = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tauri-plugin-biometry = "0.2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rand = "0.10.0"
chrono = "0.4.43"
sha2 = "0.10.9"
dashmap = "6.1.0"
chacha20poly1305 = "0.10.1"
blake3 = "1.8.3"
tauri-plugin-dialog = "2"
walkdir = "2"
tauri-plugin-http = "2.5.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
path-slash = "0.2.1"
pathdiff = "0.2.3"
serde_bytes = "0.11"
tokio-util = "0.7"
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }
rmcp = { version = "1.1.0", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
url = "2"

# 桌面端启用 DNS 解析（Android 上 /etc/resolv.conf 不存在，不启用）
[target.'cfg(not(target_os = "android"))'.dependencies]
swarm-p2p-core = { workspace = true, features = ["dns"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [
    "windows-native",
] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [
    "apple-native",
] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [
    "linux-native-sync-persistent",
    "crypto-rust",
    "vendored",
] }

# Android 文件选择插件
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = { version = "=26.0.0", features = [
    "legacy_storage_permission",
] }
