[package]
name = "swarmdrop"
version = "0.6.0"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
tokio = "1.49.0"
async-trait = { workspace = true }
swarm-p2p-core = { workspace = true, features = ["dns"] }
swarmdrop-core = { workspace = true, features = ["specta"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tauri-plugin-biometry = "0.2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# MCP Bridge —— 仅 debug 注册(见 setup.rs::register_plugins),供 AI 调试桥使用;
# release 会编译但不注册,因此攻击面仅限 dev。无条件依赖以便 tauri-build 收集其 ACL。
tauri-plugin-mcp-bridge = "0.11"
rand = "0.10.0"
chrono = "0.4.43"
dashmap = "6.1.0"
blake3 = "1.8.3"
tauri-plugin-dialog = "2"
walkdir = "2"
tauri-plugin-http = "2.5.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
path-slash = "0.2.1"
pathdiff = "0.2.3"
serde_bytes = "0.11"
tokio-util = "0.7"
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }
rmcp = { version = "2", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
url = "2"
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid", "chrono", "serde_json"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["typescript", "derive"] }
# keyring 4.x：默认 v1 feature 按平台自动选后端（macOS=apple-native / Windows=windows-native /
# Linux=zbus-secret-service + crypto-rust）。4.x 已移除 apple-native/windows-native/
# linux-native-sync-persistent/crypto-rust/vendored 等旧 feature，故不再按 target 分别声明。
keyring = "4.1.2"
# 桌面壳原生字符串（托盘菜单 + 系统通知）本地化。前端 Lingui 管 App 内文案，rust-i18n
# 只覆盖 Rust 直接渲染的 OS 表面。locale 目录见 src-tauri/locales/，i18n! 宏在 lib.rs，
# 缺项回退源 locale zh。
rust-i18n = "4"

# Windows：运行时自注册「任意文件 / 文件夹」右键 shell verb（fileAssociations 覆盖不到通配）。
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
