[package]
name = "swarm-bootstrap"
version = "0.6.0"
edition.workspace = true

[[bin]]
name = "swarm-bootstrap"
path = "src/main.rs"

[dependencies]
swarmdrop-net = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
