[package]
name = "swarmdrop-core"
version = "0.5.3"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
unsigned-varint = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
swarmdrop-net = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
entity = { workspace = true }
blake3 = "1.8.3"
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid", "chrono", "serde_json"], optional = true }

[features]
default = []
# 桌面 src-tauri 开启；移动 mobile-core 走 uniffi 不开。
# 打开后所有跨前端的 struct/enum 会 derive specta::Type，可被 tauri-specta 收集。
specta = ["dep:specta", "entity/specta"]

[dev-dependencies]
# tests/ 集成测试用：workspace 的 tokio 不带 feature，#[tokio::test] 需 macros + rt-multi-thread。
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# migration 不是普通依赖，端到端 harness 要 Migrator::up 建 sqlite::memory schema。
migration = { workspace = true }
if-addrs = "0.15.0"
