[package]
name = "entity"
version = "0.1.0"
edition.workspace = true

[dependencies]
sea-orm = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { workspace = true }
specta = { version = "=2.0.0-rc.25", features = ["derive"], optional = true }

[features]
default = []
# 桌面 src-tauri 开启，把 enum / 结构体导出给 tauri-specta 生成 TS bindings。
# RN 端的 mobile-core 走 uniffi 桥，不开此 feature。
specta = ["dep:specta"]
# SQLite runtime（桌面/移动开；Web 不开——entity 本体是纯类型，wasm 可编）。
# 见 dev-notes/knowledge/storage-abstraction.md「第 0 步」。
sqlite = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite"]
