[package]
name = "migration"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { workspace = true }
sea-orm = { workspace = true, features = ["schema-sync", "runtime-tokio-rustls", "sqlx-sqlite"] }
strum = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
