[package]
name = "net-web-smoke"
version = "0.0.0"
edition = "2024"
publish = false

# M5 冒烟壳：验证 swarmdrop-net 内核在真实浏览器里的三条通路
#   ① 浏览器 dial native helper（ws:// 私网 + webrtc-direct certhash）
#   ② 浏览器经 circuit relay 被动接收连接（reservation + 对端拨 circuit 地址）
#   ③ 双向 RPC echo（同一份 Rpc 定义两端共享——「单核心包」的直接证据）
#
# 放 spike/（根 Cargo.toml exclude），不进 workspace：wasm-only 一半 + 自带 profile。
# 结构照抄 spike/webrtc-direct-https。

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swarmdrop-net = { path = "../../crates/net" }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tracing = "0.1"

# ============ native：helper / dial 两用 CLI ============
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ============ wasm：浏览器壳 ============
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# master 的 libp2p-swarm 精确 pin =0.4.58，必须跟着钉
wasm-bindgen-futures = "=0.4.58"
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-subscriber-wasm = "0.1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"
