[package]
name = "webrtc-direct-https-spike"
version = "0.0.0"
edition = "2024"
publish = false

# 放 spike/ 而非 crates/：根 Cargo.toml `exclude = ["spike"]`，本 crate 一半是 wasm-only，
# 进 workspace 会被桌面 target 白编一遍。同 spike/iroh-web。
#
# ############################################################################
# # 为什么全用 git rev 而不是 crates.io —— 这是本 spike 最重要的发现
# ############################################################################
#
# **crates.io 上最新的 `libp2p-webrtc 0.9.0-alpha.1` 的 webrtc-direct 是坏的。**
# 实测：浏览器 ICE 能打通（服务端收到 IncomingConnection），但握手死在
# `data channel opening took longer than 10 seconds`，拨号端报
# `Failed to negotiate transport protocol(s): Timeout has been reached`。
#
# 隔离过程（两端逐一降到与官方 examples/browser-webrtc 完全相同的配置）：
#   - 客户端只装 webrtc（去掉 or_transport）→ 仍失败 ⇒ 不是 transport 组合的问题
#   - 服务端也只装 webrtc（SPIKE_WEBRTC_ONLY=1，去掉 dns/ws）→ 仍失败 ⇒ 不是我的配置
#   - 唯一剩下的变量是版本。换 git master 后**同一份代码立刻通**（RTT 400µs）
#
# 上游 CHANGELOG 点名了修复，`transports/webrtc/CHANGELOG.md` 的 0.10.0-alpha 第一条：
#   「Update webrtc-rs to v0.17 and **fix libp2p noise data channel negotiation**.
#     See PR 6429」
#
# ⇒ **webrtc-direct 今天要用就必须吃 git 依赖**，等 0.10.0-alpha 发布才能回 crates.io。
#    这比「它是 alpha」严重一档：不是「不稳」，是**已发布版本根本不通**。

[lib]
crate-type = ["cdylib", "rlib"]

# ============ 原生：服务端 ============
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c5059", features = [
    "ed25519",
    "macros",
    "ping",
    "tokio",
    "noise",
    "yamux",
    "tcp",
    "websocket",
    # ⚠️ libp2p 0.56.0 的 feature bug：只开 `websocket` 不开 `dns` **编不过** ——
    # builder 的 websocket phase 无条件引用 `libp2p_dns`，报
    # `cannot find module or crate libp2p_dns` + `no variant named Dns`。
    # 我们 libs/core 把 dns 做成了可选 feature（Android 无 /etc/resolv.conf），
    # 若将来给桌面加 ws listener，这个隐式依赖要一并处理。
    "dns",
] }
# 注意版本：crates.io 上最新是 0.9.0-alpha.1（rust-libp2p master 上是未发布的 0.10.0-alpha）。
# **它不在 libp2p facade 里** —— facade 只有 webrtc-websys，原生 webrtc 必须直接依赖。
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c5059", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
futures = "0.3"
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
# 自签证书：给 localhost + 本机 LAN IP 签 SAN，让页面能跑在 https:// 上。
rcgen = "0.13"
# 显式依赖 rustls 只为调 install_default()——依赖树里 ring 与 aws-lc-rs 并存，
# rustls 拒绝自动选，axum-server 会在 unwrap 处 panic。
rustls = { version = "0.23", features = ["ring"] }
if-addrs = "0.15"

# ============ wasm：浏览器客户端 ============
[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "93c5059", features = [
    "ed25519",
    "macros",
    "ping",
    "noise",
    "yamux",
    "webrtc-websys",
    "websocket-websys",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
futures = "0.3"
# libp2p 依赖它但**不 re-export**（facade lib.rs 里无 futures_timer）。
# wasm 上没有 tokio::time，超时只能靠它。libp2p 已把它带进 wasm 树，零额外体积。
futures-timer = { version = "3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
# master 的 libp2p-swarm 把它**精确 pin** 成 =0.4.58，我们必须跟着钉，否则 cargo 无解。
wasm-bindgen-futures = "=0.4.58"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "time"] }
tracing-subscriber-wasm = "0.1"
web-sys = { version = "0.3", features = ["Window", "Location"] }
